Sun Aug 3 15:50:51 HKT 2003 William Brack <wbrack@mmm.com.hk>

	Fixed bug 117552 - sort with multiple keys
	* xsltutils.c: enhanced treatment of NaN when multiple sort
	  keys are specified.
	* tests/general/Makefile.am tests/docs/Makefile.am:
	  Added test case (bug-125) to regression suite.
	  
Sat Aug 2 09:55:38 HKT 2003 William Brack <wbrack@mmm.com.hk>

	Fixing bug 118561 (IRIX MIPSPro compiler warnings)
	* transform.c, variables.c, xslt.c, xsltutils.c:
	  removed some unused variables
  
Thu Jul 31 20:33:12 HKT 2003 William Brack <wbrack@mmm.com.hk>

	Fixing bug 118558 (Solaris 8 compiler warnings)
	* xslt.c: minor re-ordering of code
	* functions.c: added an explicit cast
	* number.c: added include for string.h
	* security.c: added an explicit cast

Tue Jul 29 12:43:17 HKT 2003 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c test/exslt/data/seconds.1 : changed sign
	  of date:seconds as previously posted to the mailing list
	* numbers.c: extensive modification to cater for UTF8 within
	  the various routines.

Thu Jul 24 19:38:56 IST 2003 Daniel Veillard <daniel@veillard.com>

	* libexslt/strings.c: applied patch from Shaun McCance to fix bug
	  #117616 about EXST str:tokenize.
	* tests/exslt/strings/Makefile.am tests/exslt/strings/tokenize.3.*:
	  added the test in the regression suite.

Wed Jul 23 21:57:39 IST 2003 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: applying a patch based on #117377
	  for --path option.

Mon Jul 21 20:28:11 IST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: allow strip-space to support full namespaces
	  using prefix:* , should fix #114287
	* tests/docs/Makefile.am tests/docs/bug-124.*
	  tests/general/Makefile.am tests/general/bug-124*: added a
	  test to the regression suite for this bug.

Mon Jul 21 20:09:57 IST 2003 Daniel Veillard <daniel@veillard.com>

	* libxslt/tramsform.c: make xsl:copy on attribute a copy in case
	  the attribute was already defined, should fix bug #113812